--- a/localisation/english/extended_magiks_2_l_english.yml
+++ b/localisation/english/extended_magiks_2_l_english.yml
@@ -1,15 +1,15 @@
 ﻿l_english:
 
-magic_weapon_fire:0 "Fire Magic"
-magic_weapon_fire_desc:0 "Burn thy enemies"
-magic_weapon_ice:0 "Ice Magic"
-magic_weapon_ice_desc:0 "It's cool"
-magic_weapon_water:0 "Water Magic"
-magic_weapon_water_desc:0 "Essential for life"
-magic_weapon_wind:0 "Wind Magic"
-magic_weapon_wind_desc:0 "Harnesses the power and force of the air"
-magic_weapon_earth:0 "Earth Magic"
-magic_weapon_earth_desc:0 "Magic of the ground"
+magiks_fire:0 "Fire Magic"
+magiks_fire_desc:0 "Burn thy enemies"
+magiks_ice:0 "Ice Magic"
+magiks_ice_desc:0 "It's cool"
+magiks_water:0 "Water Magic"
+magiks_water_desc:0 "Essential for life"
+magiks_wind:0 "Wind Magic"
+magiks_wind_desc:0 "Harnesses the power and force of the air"
+magiks_earth:0 "Earth Magic"
+magiks_earth_desc:0 "Magic of the ground"
 
 # ####################
 # Technologies
@@ -19,43 +19,45 @@ magic_weapon_earth_desc:0 "Magic of the ground"
   # Weapons
   # --------------------
 
-tech_magic_fire_ball:0 "Fire Ball"
-tech_magic_fire_ball_desc:0 "Basic fire spells"
-tech_magic_fire_blast:0 "Fire Blast"
-tech_magic_fire_blast_desc:0 "More advanced fire spells"
-tech_magic_fire_storm:0 "Fire Storm"
-tech_magic_fire_storm_desc:0 "Heavy storms of fire"
-tech_magic_fire_dragon_breath:0 "Dragon's Breath"
-tech_magic_fire_dragon_breath_desc:0 "Engulfs enemies in flames"
-tech_magic_fire_dragon_wrath:0 "Dragon's Wrath"
-tech_magic_fire_dragon_wrath_desc:0 "Fire destruction to the max"
+magiks_tech_fire_ball:0 "Fire Ball"
+magiks_tech_fire_ball_desc:0 "Basic fire spells"
+magiks_tech_fire_blast:0 "Fire Blast"
+magiks_tech_fire_blast_desc:0 "More advanced fire spells"
+magiks_tech_fire_storm:0 "Fire Storm"
+magiks_tech_fire_storm_desc:0 "Heavy storms of fire"
+magiks_tech_fire_dragon_breath:0 "Dragon's Breath"
+magiks_tech_fire_dragon_breath_desc:0 "Engulfs enemies in flames"
+magiks_tech_fire_dragon_wrath:0 "Dragon's Wrath"
+magiks_tech_fire_dragon_wrath_desc:0 "Fire destruction to the max"
 
-tech_magic_ice_spike:0 "Ice Spike"
-tech_magic_ice_spike_desc:0 "Basic ice spells"
-tech_magic_ice_beam:0 "Ice Beam"
-tech_magic_ice_beam_desc:0 "Cold Beam of Ice"
-tech_magic_ice_blizzard:0 "Blizzard"
-tech_magic_ice_blizzard_desc:0 "Chilly storms of frost, snow and ice"
-tech_magic_ice_wendigo_strike:0 "Wendigo's Strike"
-tech_magic_ice_wendigo_strike_desc:0 "Strong, cold assault"
-tech_magic_ice_wendigo_bane:0 "Wendigo's Bane"
-tech_magic_ice_wendigo_bane_desc:0 "Wrath of a Wendigo"
+magiks_tech_ice_spike:0 "Ice Spike"
+magiks_tech_ice_spike_desc:0 "Basic ice spells"
+magiks_tech_ice_beam:0 "Ice Beam"
+magiks_tech_ice_beam_desc:0 "Cold Beam of Ice"
+magiks_tech_ice_blizzard:0 "Blizzard"
+magiks_tech_ice_blizzard_desc:0 "Chilly storms of frost, snow and ice"
+magiks_tech_ice_wendigo_strike:0 "Wendigo's Strike"
+magiks_tech_ice_wendigo_strike_desc:0 "Strong, cold assault"
+magiks_tech_ice_wendigo_bane:0 "Wendigo's Bane"
+magiks_tech_ice_wendigo_bane_desc:0 "Wrath of a Wendigo"
 
   # --------------------
   # Shields
   # --------------------
 
-tech_magic_ice_shields_1:0 "Basic Ice Armor"
-tech_magic_ice_shields_1_desc:0 "Simplest form of ice shields"
-tech_magic_ice_shields_2:0 "Advanced Ice Armor"
-tech_magic_ice_shields_2_desc:0 "Hardened and tough to break"
-tech_magic_ice_shields_3:0 "Wendigo's Strength"
-tech_magic_ice_shields_3_desc:0 "Armor imbued with a Wendigo's blessing"
+magiks_tech_ice_shields_1:0 "Basic Ice Armor"
+magiks_tech_ice_shields_1_desc:0 "Simplest form of ice shields"
+magiks_tech_ice_shields_2:0 "Advanced Ice Armor"
+magiks_tech_ice_shields_2_desc:0 "Hardened and tough to break"
+magiks_tech_ice_shields_3:0 "Wendigo's Strength"
+magiks_tech_ice_shields_3_desc:0 "Armor imbued with a Wendigo's blessing"
 
-tech_magic_infused_farms:0 "Magic Infused Farms"
-tech_magic_infused_farms_desc:0 "Improves farms to reduce damage to crops"
-tech_magic_infused_crops:0 "Magic Infused Crops"
-tech_magic_infused_crops_desc:0 "Improves crop yield, resistance to disease and overall quality"
+  # --------------------
+  # 
+  # --------------------
+
+magiks_tech_irrigation:0 "Magic based Irrigation"
+magiks_tech_irrigation_desc:0 "The discovery of water bending abilities have brought in several advancements in the water management of crops, thus bringing in more bountiful harvest year round."
 
 # ####################
 # Weapons
@@ -65,31 +67,31 @@ tech_magic_infused_crops_desc:0 "Improves crop yield, resistance to disease and 
   # Fire
   # --------------------
 
-WEAPON_FIRE_1:0 "Fire Ball"
-WEAPON_FIRE_1_DESC:0 "Basic fire spells"
-WEAPON_FIRE_2:0 "Fire Blast"
-WEAPON_FIRE_2_DESC:0 "More advanced fire spells"
-WEAPON_FIRE_3:0 "Fire Storm"
-WEAPON_FIRE_3_DESC:0 "Heavy storms of fire"
-WEAPON_FIRE_4:0 "Dragon's Breath"
-WEAPON_FIRE_4_DESC:0 "Engulfs enemies in flames"
-WEAPON_FIRE_5:0 "Dragon's Wrath"
-WEAPON_FIRE_5_DESC:0 "Fire destruction to the max"
+MAGIKS_WEAPON_FIRE_1:0 "Fire Ball"
+MAGIKS_WEAPON_FIRE_1_DESC:0 "Basic fire spells"
+MAGIKS_WEAPON_FIRE_2:0 "Fire Blast"
+MAGIKS_WEAPON_FIRE_2_DESC:0 "More advanced fire spells"
+MAGIKS_WEAPON_FIRE_3:0 "Fire Storm"
+MAGIKS_WEAPON_FIRE_3_DESC:0 "Heavy storms of fire"
+MAGIKS_WEAPON_FIRE_4:0 "Dragon's Breath"
+MAGIKS_WEAPON_FIRE_4_DESC:0 "Engulfs enemies in flames"
+MAGIKS_WEAPON_FIRE_5:0 "Dragon's Wrath"
+MAGIKS_WEAPON_FIRE_5_DESC:0 "Fire destruction to the max"
 
   # --------------------
   # Ice
   # --------------------
 
-WEAPON_ICE_1:0 "Ice Spike"
-WEAPON_ICE_1_DESC:0 "Basic ice spells"
-WEAPON_ICE_2:0 "Ice Beam"
-WEAPON_ICE_2_DESC:0 "Cold Beam of Ice"
-WEAPON_ICE_3:0 "Blizzard"
-WEAPON_ICE_3_DESC:0 "Chilly storms of frost, snow and ice"
-WEAPON_ICE_4:0 "Wendigo's Strike"
-WEAPON_ICE_4_DESC:0 "Strong, cold assault"
-WEAPON_ICE_5:0 "Wendigo's Bane"
-WEAPON_ICE_5_DESC:0 "Wrath of a Wendigo"
+MAGIKS_WEAPON_ICE_1:0 "Ice Spike"
+MAGIKS_WEAPON_ICE_1_DESC:0 "Basic ice spells"
+MAGIKS_WEAPON_ICE_2:0 "Ice Beam"
+MAGIKS_WEAPON_ICE_2_DESC:0 "Cold Beam of Ice"
+MAGIKS_WEAPON_ICE_3:0 "Blizzard"
+MAGIKS_WEAPON_ICE_3_DESC:0 "Chilly storms of frost, snow and ice"
+MAGIKS_WEAPON_ICE_4:0 "Wendigo's Strike"
+MAGIKS_WEAPON_ICE_4_DESC:0 "Strong, cold assault"
+MAGIKS_WEAPON_ICE_5:0 "Wendigo's Bane"
+MAGIKS_WEAPON_ICE_5_DESC:0 "Wrath of a Wendigo"
 
 # ####################
 # Utilities
@@ -99,19 +101,41 @@ WEAPON_ICE_5_DESC:0 "Wrath of a Wendigo"
   # Shields
   # --------------------
 
-MAGIC_ICE_SHIELD_1:0 "Basic Ice Armor"
-MAGIC_ICE_SHIELD_1_DESC:0 "Simplest form of ice shields"
-MAGIC_ICE_SHIELD_2:0 "Advanced Ice Armor"
-MAGIC_ICE_SHIELD_2_DESC:0 "Hardened and tough to break"
-MAGIC_ICE_SHIELD_3:0 "Wendigo's Strength"
-MAGIC_ICE_SHIELD_3_DESC:0 "Armor imbued with a Wendigo's blessing"
+MAGIKS_ICE_SHIELD_1:0 "Basic Ice Armor"
+MAGIKS_ICE_SHIELD_1_DESC:0 "Simplest form of ice shields"
+MAGIKS_ICE_SHIELD_2:0 "Advanced Ice Armor"
+MAGIKS_ICE_SHIELD_2_DESC:0 "Hardened and tough to break"
+MAGIKS_ICE_SHIELD_3:0 "Wendigo's Strength"
+MAGIKS_ICE_SHIELD_3_DESC:0 "Armor imbued with a Wendigo's blessing"
 
-MAGIC_ICE_SMALL_SHIELD_1:0 "Small Basic Ice Armor"
-MAGIC_ICE_MEDIUM_SHIELD_1:0 "Medium Basic Ice Armor"
-MAGIC_ICE_LARGE_SHIELD_1:0 "Large Basic Ice Armor"
-MAGIC_ICE_SMALL_SHIELD_2:0 "Small Advanced Ice Armor"
-MAGIC_ICE_MEDIUM_SHIELD_2:0 "Medium Advanced Ice Armor"
-MAGIC_ICE_LARGE_SHIELD_2:0 "Large Advanced Ice Armor"
-MAGIC_ICE_SMALL_SHIELD_3:0 "Small Wendigo's Strength"
-MAGIC_ICE_MEDIUM_SHIELD_3:0 "Medium Wendigo's Strength"
-MAGIC_ICE_LARGE_SHIELD_3:0 "Large Wendigo's Strength"
+MAGIKS_ICE_SMALL_SHIELD_1:0 "Small Basic Ice Armor"
+MAGIKS_ICE_MEDIUM_SHIELD_1:0 "Medium Basic Ice Armor"
+MAGIKS_ICE_LARGE_SHIELD_1:0 "Large Basic Ice Armor"
+MAGIKS_ICE_SMALL_SHIELD_2:0 "Small Advanced Ice Armor"
+MAGIKS_ICE_MEDIUM_SHIELD_2:0 "Medium Advanced Ice Armor"
+MAGIKS_ICE_LARGE_SHIELD_2:0 "Large Advanced Ice Armor"
+MAGIKS_ICE_SMALL_SHIELD_3:0 "Small Wendigo's Strength"
+MAGIKS_ICE_MEDIUM_SHIELD_3:0 "Medium Wendigo's Strength"
+MAGIKS_ICE_LARGE_SHIELD_3:0 "Large Wendigo's Strength"
+
+# ####################
+# Traditions
+# ####################
+
+tradition_magicka:0 "Magicka"
+tradition_magicka_desc:0 "Study of magic"
+tr_magicka_adopt:0 "Magical divination bestowed"
+tr_magicka_finish:0 "Numero Uno!"
+tr_magicka_1:0 "Blessings of Tarot"
+tr_magicka_2:0 "Learning magic 2"
+tr_magicka_3:0 "Learning magic 3"
+tr_magicka_4:0 "Learning magic 4"
+tr_magicka_5:0 "Learning magic 5"
+
+edict_magiks_edict_scrying:0 "Scrying"
+edict_magiks_edict_scrying_desc:0 "Use magic to spy on other empires"
+
+magiks_scientist_leader_trait_technomancer:0 "Technomancer"
+magiks_scientist_leader_trait_technomancer_desc:0 "A magic user who uses it to further research and advancements in the arcane arts."
+magiks_leader_trait_mana_blood:0 "Mana Blood"
+magiks_leader_trait_mana_blood_desc:0 "Magic revitalizes the body and soul thus greatly extending the lifespan."
