--- a/localisation/english/magiks_extended_l_english.yml
+++ b/localisation/english/magiks_extended_l_english.yml
@@ -11,6 +11,11 @@ magiks_tech_manacite_extraction_desc:0 "Gain arcane knowledge to safely and usef
 magiks_tech_rhythm4:0 "Baryonic Acoustic Oscillations"
 magiks_tech_rhythm4_desc:0 "With the access of sound manipulation at the most fundamental level, the boundaries of musical abilities have been achievend."
 
+ magiks_tech_magiks_engineered_evolution:0 "Magikal Engineered Evolution"
+ magiks_tech_magiks_engineered_evolution_desc:0 "Magikal species forgot to pick up these sweet points."
+ magiks_tech_magiks_evolutionary_mastery:0 "Magikal Evolutionary Mastery"
+ magiks_tech_magiks_evolutionary_mastery_desc:0 "Magikal species forgot to pick up these sweet points."
+
 #####################
 # Decisions
 #####################
@@ -192,15 +197,29 @@ Ivirus:0 "Ivirus"
 
 tradition_magicka:0 "Magicka"
 tradition_magicka_desc:0 "Study of magic"
-tr_magicka_adopt:0 "You learnt about magic"
-tr_magicka_finish:0 "You mastered the theory of magic"
-tr_magicka_1:0 "Learning magic 1"
-tr_magicka_2:0 "Learning magic 2"
-tr_magicka_3:0 "Learning magic 3"
-tr_magicka_4:0 "Learning magic 4"
-tr_magicka_5:0 "Learning magic 5"
-tr_magicka_adopt_magocracy:0 "You already know it! What doink here"
-tr_magicka_finish_magocracy:0 "Wow! Congrats, you double learned it"
+tradition_magicka_magocracy_desc:0 "Mage's journey into the arcane."
+tr_magicka_adopt:0 "Magicka Tradition"
+tr_magicka_finish:0 "Magicka Traditions Finished"
+tr_magicka_adopt_magocracy:0 "Magicka Tradition"
+tr_magicka_finish_magocracy:0 "Magicka Traditions Finished"
+
+tr_magicka_finish_desc:0 "Unlock leader potential: Raises leader skill levels by §G+3§!.\nThe government changes to §H$magiks_gov_magocracy$§! authority and gains random civics in place of the current ones, as well as the §H$magiks_civic_ascended_mages$§! civic.\nAscension Perks Unlocked: §G+1§!"
+tr_magicka_finish_magocracy_desc:0 "Unlock leader potential: Raises leader skill levels by §G+4§!.\nAscension Perks Unlocked: §G+1§!"
+
+tr_magicka_1:0 "Grimoire's secrets"
+tr_magicka_1_delayed:0 "This book of magick gives alternative insights into various technologies as well as aiding our mages in their research."
+
+tr_magicka_2:0 "Blessings of Tarot"
+tr_magicka_2_delayed:0 "Luck is on our side, improving our discovery into the unknown."
+
+tr_magicka_3:0 "Numero Uno"
+tr_magicka_3_delayed:0 "Improvements in our empire's trade using Numerology."
+
+tr_magicka_4:0 "Dreamcatcher"
+tr_magicka_4_delayed:0 "Nightmares have become rarer and our people can live more happily."
+
+tr_magicka_5:0 "Star Signed"
+tr_magicka_5_delayed:0 "Blessed by the stars, our empire will flourish."
 
 magiks_civic_ascended_mages:0 "Ascended Mages"
 magiks_civic_ascended_mages_desc:0 "Magical abilities are bestowed through study and research of the arcane arts and over time, have learnt to master this powerful gift."
