--- a/localisation/english/magiks_extended_l_english.yml
+++ b/localisation/english/magiks_extended_l_english.yml
@@ -1,5 +1,4 @@
 ﻿l_english: 
-### List of localization that were not available in the original (prevent error.log bloat)
 
 #####################
 # Technology
@@ -203,9 +202,12 @@ tr_magicka_finish:0 "Magicka Traditions Finished"
 tr_magicka_adopt_magocracy:0 "Magicka Tradition"
 tr_magicka_finish_magocracy:0 "Magicka Traditions Finished"
 tr_magicka_finish_hive_mind:0 "Magicka Traditions Finished"
+tr_magicka_finish_machine:0 "Magicka Traditions Finished"
 
 tr_magicka_finish_desc:0 "Unlock leader potential: Raises leader skill levels by §G+3§!.\nThe government changes to §H$magiks_gov_magocracy$§! authority and gains random civics in place of the current ones, as well as the §H$magiks_civic_ascended_mages$§! civic.\nAscension Perks Unlocked: §G+1§!"
 tr_magicka_finish_magocracy_desc:0 "Unlock leader potential: Raises leader skill levels by §G+4§!.\nAscension Perks Unlocked: §G+1§!"
+tr_magicka_finish_hive_mind_desc:0 "Unlock leader potential: Raises leader skill levels by §G+3§!. Gains the §H$magiks_hive_mind_civic_shared_mana$§! civic.\nAscension Perks Unlocked: §G+1§!"
+tr_magicka_finish_machine_desc:0 "Unlock leader potential: Raises leader skill levels by §G+3§!. Gains the §H$magiks_machine_civic_gifted_souls$§! civic.\nAscension Perks Unlocked: §G+1§!"
 
 tr_magicka_1:0 "Grimoire's secrets"
 tr_magicka_1_delayed:0 "This book of magick gives alternative insights into various technologies as well as aiding our mages in their research."
@@ -222,5 +224,15 @@ tr_magicka_4_delayed:0 "Nightmares have become rarer and our people can live mor
 tr_magicka_5:0 "Star Signed"
 tr_magicka_5_delayed:0 "Blessed by the stars, our empire will flourish."
 
+# ####################
+# Civics
+# ####################
+
 magiks_civic_ascended_mages:0 "Ascended Mages"
 magiks_civic_ascended_mages_desc:0 "Magical abilities are bestowed through study and research of the arcane arts and over time, have learnt to master this powerful gift."
+
+magiks_hive_mind_civic_shared_mana:0 "Shared Mana"
+magiks_hive_mind_civic_shared_mana_desc:0 "Mana is distributed efficiently amongst the populace, improving the productivity and output of our resources."
+
+magiks_machine_civic_gifted_souls:0 "Gifted Souls"
+magiks_machine_civic_gifted_souls_desc:0 "Mana permeates these mechanical beings and souls begin to manifest within them."
