vanilla gene compat

--- a/localisation/english/magiks_extended_l_english.yml
+++ b/localisation/english/magiks_extended_l_english.yml
@@ -11,6 +11,11 @@ magiks_tech_manacite_extraction_desc:0 "Gain arcane knowledge to safely and usef
 magiks_tech_rhythm4:0 "Baryonic Acoustic Oscillations"
 magiks_tech_rhythm4_desc:0 "With the access of sound manipulation at the most fundamental level, the boundaries of musical abilities have been achievend."
 
+magiks_tech_magiks_engineered_evolution:0 "Magikal Engineered Evolution"
+magiks_tech_magiks_engineered_evolution_desc:0 "Magikal species forgot to pick up these sweet points."
+magiks_tech_magiks_evolutionary_mastery:0 "Magikal Evolutionary Mastery"
+magiks_tech_magiks_evolutionary_mastery_desc:0 "Magikal species forgot to pick up these sweet points."
+
 #####################
 # Decisions
 #####################
