--- a/localisation/english/magiks_extended_l_english.yml
+++ b/localisation/english/magiks_extended_l_english.yml
@@ -33,10 +33,13 @@ magiks_descisions_exterminate_dragons_desc:0 "The monsters covering this planet 
 magiks_descisions_create_hyperlane:0 "Create Hyperlane"
 magiks_descisions_create_hyperlane_desc:0 "Channel our resources and mana to generate a new hyperlane randomly to a new star system"
 magiks_descisions_delete_hyperlane:0 "Delete Hyperlane"
-magiks_descisions_delete_hyperlane_desc:0 "Yeet that"
+magiks_descisions_delete_hyperlane_desc:0 "Channel our resources and mana to dissolve a hyperlane between a random star system"
 
 magiks_descisions_create_hyperlane_into_unowned_space:0 "Create Hyperlane (Not Empire Space)"
 magiks_descisions_create_hyperlane_into_unowned_space_desc:0 "Channeling our mana beyond our borders in search of unconnected systems."
+
+magiks_descisions_delete_hyperlane_into_unowned_space:0 "Delete Hyperlane (Not Empire Space)"
+magiks_descisions_delete_hyperlane_into_unowned_space_desc:0 "Channeling our mana beyond our borders and break the bonds between the star systems"
 
 triggered_opinion_disapprove_of_hyperlane_manipulation:0 "Hyperlane Connection Disapproved"
 
