Minor edits, localization fixes

--- a/localisation/english/magiks_extended_l_english.yml
+++ b/localisation/english/magiks_extended_l_english.yml
@@ -257,7 +257,7 @@ magiks_machine_civic_gifted_souls_desc:0 "Mana permeates these mechanical beings
 # Misc
 # ####################
 
-magiks_decision_hyperlane_found_desc:0 "Found suitable Hyperlane connection from [From.GetName] to [This.GetName]!"
+magiks_decision_hyperlane_found_desc:0 "Found suitable Hyperlane from [From.GetName] to [This.GetName]!"
 
 magiks_event_hyperlane_no_system_found_desc:0 "No valid neighbour was found for [This.GetName]"
 magiks_event_hyperlane_create_found_desc:0 "Found suitable systems for new hyperlane connections"
@@ -266,15 +266,53 @@ magiks_event_hyperlane_in_border_resource_fail:0 "Requires 1000 energy, 1 influe
 magiks_event_hyperlane_out_border_resource_fail:0 "Requires 2500 energy, 4 influence and 150 manacite"
 
 NEVERMIND:0 "Nevermind."
+LETS_START:0 "Let's start"
+COMMENCE_REMOVAL:0 "Commence removal"
 
-# magiks_event_hyperlane_system_0_unclaimed:0 "§HUnclaimed:§! [magiks_hyperlane_system_0.GetName]"
-# magiks_event_hyperlane_system_1_unclaimed:0 "§HUnclaimed:§! [magiks_hyperlane_system_1.GetName]"
-# magiks_event_hyperlane_system_2_unclaimed:0 "§HUnclaimed:§! [magiks_hyperlane_system_2.GetName]"
-# magiks_event_hyperlane_system_3_unclaimed:0 "§HUnclaimed:§! [magiks_hyperlane_system_3.GetName]"
-# magiks_event_hyperlane_system_4_unclaimed:0 "§HUnclaimed:§! [magiks_hyperlane_system_4.GetName]"
+magiks_event_hyperlane_system_0_unclaimed:0 "§HUnclaimed:§! [magiks_hyperlane_system_0.GetName]"
+magiks_event_hyperlane_system_1_unclaimed:0 "§HUnclaimed:§! [magiks_hyperlane_system_1.GetName]"
+magiks_event_hyperlane_system_2_unclaimed:0 "§HUnclaimed:§! [magiks_hyperlane_system_2.GetName]"
+magiks_event_hyperlane_system_3_unclaimed:0 "§HUnclaimed:§! [magiks_hyperlane_system_3.GetName]"
+magiks_event_hyperlane_system_4_unclaimed:0 "§HUnclaimed:§! [magiks_hyperlane_system_4.GetName]"
 
-# magiks_event_hyperlane_system_0_claimed:0 "§H[magiks_hyperlane_system_0.space_owner.GetName]:§! [magiks_hyperlane_system_0.GetName]"
-# magiks_event_hyperlane_system_1_claimed:0 "§H[magiks_hyperlane_system_1.space_owner.GetName]:§! [magiks_hyperlane_system_0.GetName]"
-# magiks_event_hyperlane_system_2_claimed:0 "§H[magiks_hyperlane_system_2.space_owner.GetName]:§! [magiks_hyperlane_system_0.GetName]"
-# magiks_event_hyperlane_system_3_claimed:0 "§H[magiks_hyperlane_system_3.space_owner.GetName]:§! [magiks_hyperlane_system_0.GetName]"
-# magiks_event_hyperlane_system_4_claimed:0 "§H[magiks_hyperlane_system_4.space_owner.GetName]:§! [magiks_hyperlane_system_0.GetName]"
+magiks_event_hyperlane_system_0_owner_system:0 "[magiks_hyperlane_system_0.GetName]"
+magiks_event_hyperlane_system_1_owner_system:0 "[magiks_hyperlane_system_1.GetName]"
+magiks_event_hyperlane_system_2_owner_system:0 "[magiks_hyperlane_system_2.GetName]"
+magiks_event_hyperlane_system_3_owner_system:0 "[magiks_hyperlane_system_3.GetName]"
+magiks_event_hyperlane_system_4_owner_system:0 "[magiks_hyperlane_system_4.GetName]"
+
+magiks_event_hyperlane_system_0_claimed:0 "§H[magiks_hyperlane_system_0.space_owner.GetName]:§! [magiks_hyperlane_system_0.GetName]"
+magiks_event_hyperlane_system_1_claimed:0 "§H[magiks_hyperlane_system_1.space_owner.GetName]:§! [magiks_hyperlane_system_1.GetName]"
+magiks_event_hyperlane_system_2_claimed:0 "§H[magiks_hyperlane_system_2.space_owner.GetName]:§! [magiks_hyperlane_system_2.GetName]"
+magiks_event_hyperlane_system_3_claimed:0 "§H[magiks_hyperlane_system_3.space_owner.GetName]:§! [magiks_hyperlane_system_3.GetName]"
+magiks_event_hyperlane_system_4_claimed:0 "§H[magiks_hyperlane_system_4.space_owner.GetName]:§! [magiks_hyperlane_system_4.GetName]"
+
+magiks_dmineral_deposit:0 ""
+magiks_drich_mineral_deposit:0 ""
+magiks_dvast_mineral_deposit:0 ""
+magiks_dimmense_mineral_deposit:0 ""
+magiks_dmineral_energy_deposit:0 ""
+magiks_drich_mineral_energy_deposit:0 ""
+magiks_dmineral_food_deposit:0 ""
+magiks_drich_food_mineral_deposit:0 ""
+magiks_denergy_deposit:0 ""
+magiks_drich_energy_deposit:0 ""
+magiks_dvast_energy_deposit:0 ""
+magiks_dimmense_energy_deposit:0 ""
+magiks_dfarmland_deposit:0 ""
+magiks_drich_farmland_deposit:0 ""
+magiks_dvast_farmland_deposit:0 ""
+magiks_dimmense_farmland_deposit:0 ""
+magiks_dsociety_deposit:0 ""
+magiks_drich_society_deposit:0 ""
+magiks_dvast_society_deposit:0 ""
+magiks_dimmense_society_deposit:0 ""
+magiks_dphysics_deposit:0 ""
+magiks_drich_physics_deposit:0 ""
+magiks_dvast_physics_deposit:0 ""
+magiks_dimmense_physics_deposit:0 ""
+magiks_dengineering_deposit:0 ""
+magiks_drich_engineering_deposit:0 ""
+magiks_dvast_engineering_deposit:0 ""
+magiks_dimmense_engineering_deposit:0 ""
+d_manacite_1:0 ""
